# PSGL-Triangulation-with-minimal-obtuse-angles-and-steiner-points

./: LICENSE  Myscript.py  ReadMe.txt  triedAndFailled.txt
Clear LocalSearchVersion/: new44.json
Clear LocalSearchVersion/Header Files/: CGAL_CUSTOM_CONSTRAINED_DELAUNAY_TRIANGULATION_2.h  boost_utils.hpp  triangulation_utils.hpp
Clear LocalSearchVersion/Sources/: LocalSearch.cpp  SimulatedAnnealing.cpp  SteinerPoints.cpp  a.out  main.cpp  outputfile.cpp  test.cpp
Clear LocalSearchVersion/Tests/tests1/: ekfonisi.json
Clear LocalSearchVersion/make/: CMakeLists.txt
Header Files/: BoundaryType.hpp  CGAL_CUSTOM_CONSTRAINED_DELAUNAY_TRIANGULATION_2.h  SteinerPoints.hpp  boost_utils.hpp  random.hpp  triangulation_utils.hpp
OutputTest/: diagonismos.py  input.json  output.json
Python Scripts/: CompareInstances.py  Myscript.py  ReturnCategory  RunTriangulationForAllSubDirs.py  opt_triangulation  seperate_instances.py
Second Clear/: new44.json
Second Clear/Header Files/: triangulation_utils.hpp
Second Clear/Sources/: LocalSearch.cpp  SimulatedAnnealing.cpp  boost_utils.cpp  main.cpp  triangulation_utils.cpp
Second Clear/make/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
Second Clear/make/CGAL_Qt5_moc_and_resources_autogen/: deps
Sources/: AntCollony.cpp  BoundaryType.cpp  LocalSearch.cpp  Previous_Project.cpp  Random.cpp  SimulatedAnnealing.cpp  SteinerPoints.cpp  boost_utils.cpp  main.cpp  outputfile.cpp  test.cpp  triangulation_utils.cpp
TestFiles/1_NoAdditionalConvex/AntResults/: output_10_point-set_40_1b92b629.instance.json  output_11_point-set_60_9fc02edd.instance.json  output_1_convex.json  output_2_convex.json  output_3_convex.json  output_4_convex.json  output_5_convex.json  output_6_convex.json  output_7_point-set_10_7451a2a9.instance.json  output_8_point-set_10_c04b0024.instance.json  output_9_point-set_20_fa3fd7e0.instance.json
TestFiles/2_NonCycleConvex/: 1_non_cycle.json  2_non_cycle.json  3_non_cycle.json  4_non_cycle.json
TestFiles/2_NonCycleConvex/results/: output_1_non_cycle.json  output_2_non_cycle.json  output_3_non_cycle.json  output_4_non_cycle.json
TestFiles/3_CycleConvex/: 2_cycle.json  6_cycle.json
TestFiles/3_CycleConvex/AntResults/: output_10_cycle.json  output_11_cycle.json  output_12_cycle.json  output_13_cycle.json  output_14_cycle.json  output_15_cycle.json  output_16_cycle.json  output_17_cycle.json  output_18_cycle.json  output_1_cycle.json  output_2_cycle.json  output_3_cycle.json  output_4_cycle.json  output_5_cycle.json  output_6_cycle.json  output_7_cycle.json  output_8_cycle.json  output_9_cycle.json
TestFiles/4_OrthoparallelNonConvex/AntsResults/: output_10_inst_ortho.json  output_11_ortho_150_53eb4022.instance.json  output_12_ortho_250_3b977f7e.instance.json  output_13_ortho_250_6e6a66c2.instance.json  output_1_inst_ortho.json  output_2_inst_ortho.json  output_3_inst_ortho.json  output_4_inst_ortho.json  output_5_inst_ortho.json  output_6_inst_ortho.json  output_7_inst_ortho.json  output_8_inst_ortho.json  output_9_inst_ortho.json
TestFiles/5_Other/: script.py
Third/: new44.json
Third/Header Files/: triangulation_utils.hpp
Third/Sources/: Previous_Project.cpp  SteinerPoints.cpp  main.cpp  outputfile.cpp
Third/make/: CMakeLists.txt
make/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
make/CGAL_Qt5_moc_and_resources_autogen/: deps  moc_predefs.h
make/CGAL_Qt5_moc_and_resources_autogen/34EZIPZFLO/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
(+182 files in other folders)
